CTA to Impact 500 and bgirl

--- a/bgirl.html
+++ b/bgirl.html
@@ -244,7 +244,22 @@
                 </div>
             </div>
         </section>
-        <!--end of regional rural section-->
+        
+        <div class="wpo-cta-area">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12">
+						<div class="wpo-cta-section">
+							<div class="wpo-cta-content">
+								<h2>Got a question on how to join the STEM clubs</h2>
+								<a href="contact.html">Contact Us</a>
+							</div>
+							<div class="shape"><img src="assets/images/index/cta-shape.png" alt=""></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
         <!-- start of wpo-site-footer-section -->
         <footer class="wpo-site-footer">
             <div class="wpo-upper-footer">
